# CoronaCounter

./: .gitignore  Cargo.toml  GetData.R  README.md  install_deps.sh  main.rs
