[package]
name = "CovidCounter"
version = "0.1.0"
authors = ["Mikhail Chalakov <mikhail@chalakov.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4.34"
umya-spreadsheet = "0.1.19-beta"

[[bin]]
name = "CovidCounter"
path = "main.rs"
curl = "0.5.0"
tokio = { version = "0.2.21", features = ["macros", "rt-threaded", "blocking", "time"] }
warp = "0.2.3"
thiserror = "1.0.20"
chrono = { version = "0.4.13", features = ["serde"] }
uuid = { version = "0.8", features = ["v4"] }
lazy_static = "=1.4.0"
